[package]
name = "rust_ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = "0.16.9"
rand_core = "0.6.4"
k256 = "0.10.2"
hex="0.4.3"
eth-keystore = "0.5.0"
rust-crypto = "0.2"
ethers = "2.0.11"
secp256k1 = "0.28.1"
serde = "1.0.196"
serde_derive = "1.0.102"
serde_json = "1.0.41"
leveldb = "0.8.6"
tempdir = "0.3.7"
